add api configurations for crawling/authorizing data
